--- a/index.html
+++ b/index.html
@@ -6,43 +6,79 @@
     <a href="#" onClick="useBluetooth()">Web Bluetooth</a>
 
     <script type="text/javascript">
-      const useBluetooth = function () {
-        console.log('starting...');
+      const handleHeartRateChanged = function (event) {
+        console.log(event);
+        console.log(event.currentTarget.value.getUint8(0));
 
-        console.log(navigator.bluetooth);
+        // event.currentTarget.readValue()
+        // .then( function (value) {
+        //   console.log('read value start');
+        //   console.log(value);
+        //   console.log('read value end');
+        // });
+      }
+
+      function handleCustomCharacteristic(characteristic) {
+        return characteristic.startNotifications()
+        .then(char => {
+          characteristic.addEventListener('characteristicvaluechanged', onCustomValueChanged);
+        });
+      }
+
+      function onCustomValueChanged(event) {
+        let characteristic = event.target;
+        console.log(parseCustomValue(characteristic.value));
+      }
+
+      function parseCustomValue(data) {
+        return data;
+      }
+
+      var customService = null;
+
+      const useBluetooth = function () {
+        console.log('Starting with Web Bluetooth API');
+
+        var heartRateCharacteristic;
 
         // Step 1: Scan for a device with 0xffe5 service
         navigator.bluetooth.requestDevice({
-          // filters: [{ services: [0xffe5] }],
-          acceptAllDevices: true,
-          optionalServices: [0xffe5, 'user_data']
+          filters: [
+            { services: ['9f729a95-52d3-58cf-73f0-db454f77650c'] },
+          ]
         })
-        .then(function(device) {
-          console.log('device');
-          // Step 2: Connect to it
-          return device.gatt.connect();
+        .then(device => { return device.gatt.connect(); })
+        .then(server => { return server.getPrimaryService('9f729a95-52d3-58cf-73f0-db454f77650c') })
+        .then(service => {
+          customService = service;
+
+          return Promise.all([
+            service.getCharacteristic('f21bd22e-be20-4e3b-f49b-4b94a90979b7')
+            .then(handleCustomCharacteristic)
+          ])
+          // // Step 4: get the Characteristic
+          // return service.getCharacteristic('f21bd22e-be20-4e3b-f49b-4b94a90979b7');
         })
-        .then(function(server) {
-          console.log('server');
-          console.log(server);
-          // console.log(server.getPrimaryServices());
-          // Step 3: Get the Service
-          // return server.getPrimaryService('0xffe5');
-          return server.getPrimaryServices();
-          // return server.getPrimaryService('user_data');
-        })
-        .then(function(service) {
-          console.log('service');
-          console.log(service);
-          // Step 4: get the Characteristic
-          return service.getCharacteristic(0xffe9);
-        })
-        .then(function(characteristic) {
-          console.log('characteristic');
-          // Step 5: Write to the characteristic
-          var data = new Uint8Array([0xbb, 0x25, 0x05, 0x44]);
-          return characteristic.writeValue(data);
-        })
+        // .then(function(characteristic) {
+        //   console.log('characteristic');
+        //   console.log(characteristic);
+
+        //   heartRateCharacteristic = characteristic;
+        //   heartRateCharacteristic.addEventListener('characteristicvaluechanged',
+        //     handleHeartRateChanged);
+
+        //   heartRateCharacteristic.readValue()
+        //   .then( function (value) {
+        //     console.log('fede1');
+        //     console.log(value);
+        //     console.log('fede');
+        //   });
+
+        //   heartRateCharacteristic.startNotifications();
+        //   // Step 5: Write to the characteristic
+        //   // var data = new Uint8Array([0xbb, 0x25, 0x05, 0x44]);
+        //   // return characteristic.writeValue(data);
+        // })
         .catch(function(error) {
           // And of course: error handling!
           console.error('Connection failed!', error);
